--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,6 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Base.Theme.RustomLab01" parent="Theme.Material3.DayNight.NoActionBar">
+    <style name="Base.Theme.RustomLab01" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
         <!-- Customize your light theme here. -->
         <item name="colorPrimary">@color/my_primary</item>
         <item name="colorSecondary">@color/my_secondary</item>
