--- a/app/src/main/res/layout/receive_message.xml
+++ b/app/src/main/res/layout/receive_message.xml
@@ -16,7 +16,7 @@
         android:layout_marginStart="136dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="8dp"
-        android:text="Message goes here"
+        android:text="@string/message"
         android:textColor="#000000"
         android:textSize="24sp"
 
@@ -42,7 +42,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="124dp"
         android:layout_marginBottom="48dp"
-        android:text="Time goes here"
+        android:text="@string/time"
         android:textSize="9sp"
         app:layout_constraintBottom_toBottomOf="@id/send_image"
         app:layout_constraintStart_toStartOf="parent"
